# pico-usb-fake

./: Cargo.toml  build.sh
.cargo/: config.toml
src/: main.rs
